# dpp-bot-template

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: docker.yml
src/: main.cpp
